--- a/_data/contact-links.yaml
+++ b/_data/contact-links.yaml
@@ -1,9 +1,9 @@
-- title: hello@blackode.in
-  link: 'mailto: hello@blackode.in'
+- title: p18sioz@ionio.gr
+  link: 'mailto: p18sioz@ionio.gr'
   icon-class: "fa fa-envelope"
 
-- title: "09494507287"
-  link: 'phone: 09494507287'
+- title: "69XXXXXXX"
+  link: 'phone: 69XXXXXXX'
   icon-class: "fa fa-phone"
 
 - title: blackode.in
